--- a/docs.html
+++ b/docs.html
@@ -372,7 +372,7 @@
                     <div class="text-sm text-color mb-10 f-f-l">
                         <!-- Rename cleandocs with your respective name -->
                         <p tabindex="0" class="text-white focus:outline-none">
-                            &copy; 2022 Cleandocs. All rights reserved
+                            &copy; 2022 KIU. All rights reserved
                         </p>
                     </div>
                 </div>
