--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
             <p class="font-sans text-white text-center w-[300px] lg:w-[700px] md:w-[700px] sm:w-[600px] mt-4">
                 User maual web document for LMS project
             </p>
-            <small>
+            <br>
+            <small style="color: white;">
                 “Strengthening of Quality Education at Gilgit Baltistan by Using Digital Platforms”, is one of the projects of KIU led by Dr. Aftab Ahmed Khan as Principal Investigator.  
 This project aims to design, develop, customize, and integrate smart and Intelligent Learning Management Systems in teaching and learning of some selected Schools of Gilgit-Baltistan. This project falls under Research Grants for Local Challenge Fund of Higher Education Commission of Pakistan.
             </small>
