--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ This project aims to design, develop, customize, and integrate smart and Intelli
                     <div class="text-sm text-color mb-10 f-f-l">
                         <!-- Rename cleandocs with your respective name -->
                         <p tabindex="0" class="text-white focus:outline-none">
-                            &copy; 2022 KIU. All rights reserved
+                            &copy; 2022 LCF Project. All rights reserved
                         </p>
                     </div>
                 </div>
